# ddos

./: .gitignore  Cargo.toml  QUICKSTART.md  README.md  kernel8.img  kernel_2712.img  link.ld
.cargo/: config.toml
Documentation/: Phase1.md
Notes/: heap(phase 1).md  locks(phase 2).md
scripts/: README.md  build-qemu.sh  build-rpi4.sh  build-rpi5.sh
sdcard/rpi5-boot/: README.txt  config.txt  kernel_2712.img
src/: boot.s  console.rs  font.rs  framebuffer.rs  hardwareselect.rs  mailbox.rs  main.rs  uart.rs
src/cpu/: boot.s
src/drivers/: console.rs  framebuffer.rs  mailbox.rs  mod.rs  uart.rs
src/memory/: config.rs  heap.rs  mod.rs
src/utils/: font.rs  locked.rs  mod.rs
